# itlp_ros_player

./: CMakeLists.txt  README.md  package.xml
data/: itlp_gt_fixed.csv  itlp_gt_origin.csv
launch/: localization.launch  mapping.launch
scripts/: gt_for_itlp.py
